# esp32-csi-spectroscope

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  csi_manager.c  csi_manager.h  init_manager.c  init_manager.h  main.c  main.h  recv_manager.c  recv_manager.h  send_manager.c  send_manager.h  task_prio.h
tools/: csi_data_read_parse.py  csi_read_data_parse.py  requirements.txt
